@@ -1,3 +1,14 @@
+2011-05-01  Patrick Gansterer  <paroga@webkit.org>
+
+        [WIN] Unreviewed buildfix after r85434.
+
+        * DumpRenderTree/win/FrameLoadDelegate.cpp:
+        (FrameLoadDelegate::FrameLoadDelegate):
+        * DumpRenderTree/win/UIDelegate.cpp:
+        (DRTUndoManager::DRTUndoManager):
+        (UIDelegate::UIDelegate):
+        (UIDelegate::resetUndoManager):
+
 2011-05-01  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
