@@ -1,3 +1,10 @@
+2011-05-01  Patrick Gansterer  <paroga@webkit.org>
+
+        [WIN] Unreviewed buildfix after r85434.
+
+        * WebView.cpp:
+        (WebView::paint):
+
 2011-04-21  Ryosuke Niwa  <rniwa@webkit.org>
 
         WinCE build fix after r84574.
